add update name api and logger for gateway HTTP server and GRPC server
